--- a/scrapapp.webui/Views/Admin/RoleCreate.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleCreate.cshtml
@@ -1,25 +1,33 @@
 @model RoleModel
 
 @section title {<title>Create Role | ScrapApp</title>}
-<div class="row">
-    <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="RoleCreate" method="POST">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="form-group row">
-            <label asp-for="Name" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-                <input class="form-control" asp-for="Name">
+<div class="container-sm mt-5" >
+  <div class="row justify-content-center">
+    <div class="card col-6 p-0">
+      <div class="card-header bg-dark" style="color:#109801;font-size:30px;">
+        <div class="card-title text-center pt-3">Create Role </div>
+      </div>
+      <div class="card-body">
+        <form class="form-group" asp-controller="Admin" asp-action="RoleCreate" method="POST">
+          <div class="form-group">
+            <div class="row justify-content-center">
+              <div class="col-7 mb-3">
+                <input class="form-control" asp-for="Name" placeholder="Name">
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-        </div>            
-        <div class="form-group row">
-            <div class="col-sm-10 offset-sm-2">
+              </div>
+              <div class="col-6 d-flex justify-content-center">
                 <button type="submit" class="btn btn-primary">Save Role</button>
+              </div>
             </div>
-        </div>
-    </form>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
+
+
+
 @section JavaScript
 {
     <script src="~/js/jquery.validate.js"></script>
