--- a/scrapapp.webui/Views/Cart/Index.cshtml
+++ b/scrapapp.webui/Views/Cart/Index.cshtml
@@ -13,9 +13,9 @@
 </div>
 }
 else{
-<div class="row">
+<div class="row mt-3">
   <div class="col-md-8">
-    <div class="text-left">
+    <div class="text-center">
       <h4>Cart Items</h4>
     </div>
     <table class="table table-hover">
@@ -44,7 +44,7 @@ else{
             <form asp-controller="Cart" asp-action="DeleteFromCart" method="post">
               <input type="hidden" name="productId" value="@item.ProductId">
               <button type="submit" class="btn btn-danger btn-sm">
-                <i class="fa fa-times fa-fw"></i>
+                Delete
               </button>
             </form>
           </td>
@@ -54,7 +54,7 @@ else{
     </table>
   </div>
   <div class="col-md-4">
-    <div class="text-left">
+    <div class="text-center">
       <h4>Cart Summary</h4>
     </div>
     <table class="table">
@@ -75,10 +75,10 @@ else{
     </table>
     <div class="text-center">
       <a href="/" class="btn btn-primary">
-        <i class="fa fa-arrow-circle-left fa-fw"></i> Alışverişe Devam Et
+        Alışverişe Devam Et
       </a>
       <a href="/checkout" class="btn btn-primary">
-        <i class="fa fa-arrow-circle-right fa-fw"></i> Checkout
+        Checkout
       </a>
     </div>
   </div>
