--- a/scrapapp.webui/Views/Admin/UserList.cshtml
+++ b/scrapapp.webui/Views/Admin/UserList.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-12">
         <h1 class="h3">User List</h1>
         <hr>
-        <a class="btn btn-primary btn-sm" href="/admin/user/create">Create User</a>
+            <a class="btn btn-primary btn-sm" asp-controller="Admin" asp-action="UserCreate">Create User</a>
         <hr>
         <table data-page-length='3' id="myTable" class="table table-bordered mt-3">
             <thead>
@@ -36,9 +36,8 @@
                                 <td>@item.Email</td>                              
                                 <td>@item.EmailConfirmed</td>                              
                                 <td>
-                                    <a href="/admin/user/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
-                                    
-                                    <form action="/admin/user/delete" method="POST" style="display: inline;">
+                                    <a class="btn btn-primary btn-sm" asp-controller="Admin" asp-action="UserEdit" asp-route-id="@item.Id">Edit</a>
+                                    <form asp-controller="Admin" asp-action="DeleteUser" method="POST" style="display: inline;">
                                         <input type="hidden" name="UserId" value="@item.Id">
                                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                                     </form>
