Refactoring Process Phase 1.2

--- a/scrapapp.webui/Views/Account/AccessDenied.cshtml
+++ b/scrapapp.webui/Views/Account/AccessDenied.cshtml
@@ -1,2 +1,4 @@
-@section title {<title>UnAuthorized Area| ScrapApp</title>}
-<h1 class="h3">Yetkisiz Alana Erişmeye Çalıştınız.</h1>
+@section title {<title>UnAuthorized Area | ScrapApp</title>}
+<div class="text-center fs-5 alertdanger">
+	<h1 class="h3">You are not authorized to access this area.</h1>
+</div> 
