--- a/scrapapp.webui/Views/Account/Login.cshtml
+++ b/scrapapp.webui/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-outline-primary">Login</button>
                 <a href="/account/forgotpassword" class="btn btn-link" style="text-decoration:none;color:#4e5867;">Şifremi Unuttum</a>
               </div>
             </div>
