--- a/scrapapp.webui/Views/Admin/RoleCreate.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleCreate.cshtml
@@ -16,7 +16,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary">Save Role</button>
+                <button type="submit" class="btn btn-outline-primary">Save Role</button>
               </div>
             </div>
           </div>
@@ -30,6 +30,6 @@
 
 @section JavaScript
 {
-    <script src="~/js/jquery.validate.js"></script>
-    <script src="~/js/jquery.validate.unobtrusive.js"></script>
+  <script src="~/js/jquery.validate.js"></script>
+  <script src="~/js/jquery.validate.unobtrusive.js"></script>
 }
