--- a/scrapapp.webui/Views/Product/Detail.cshtml
+++ b/scrapapp.webui/Views/Product/Detail.cshtml
@@ -75,7 +75,7 @@
               <div class="input-group mb-3">
                 <input type="number" name="quantity" class="form-control" value="1" min="1" step="1" style="width: 100px;">
                 <div class="input-group-append">
-                  <button class="btn btn-primary btn-lg" type="submit" style="min-width:100px;background-color:#f27a1a">Add to Cart</button>
+                  <button class="btn btn-outline-primary btn-lg" type="submit" style="min-width:100px;background-color:#f27a1a">Add to Cart</button>
                 </div>
               </div>     
             </form>
