--- a/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
+++ b/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
@@ -1,9 +1,5 @@
 @model AlertMessage
-<div class="row mt-3">
-    <div class="col-3 mx-auto">
-        <div class="alert alert-@Model.AlertType text-center">
-            <h4 class="alert-title">@Model.Title</h4>
-            <p>@Model.Message</p>
-        </div>
-    </div>
-</div>
+<div class="text-center fs-5 alert@(Model.AlertType)">
+  <h4 class="alert-title">@Model.Title</h4>
+  <p>@Model.Message</p>
+</div> 
