--- a/scrapapp.webui/Views/Account/ForgotPassword.cshtml
+++ b/scrapapp.webui/Views/Account/ForgotPassword.cshtml
@@ -11,7 +11,7 @@
             <input class="form-control" type="email" name="Email" placeholder="E-Mail">
           </div>         
           <div class="form-group row">
-              <button type="submit" class="btn btn-info">Submit</button>
+              <button type="submit" class="btn btn-outline-info">Submit</button>
           </div>
         </form>
       </div>
