--- a/scrapapp.webui/Views/Account/Register.cshtml
+++ b/scrapapp.webui/Views/Account/Register.cshtml
@@ -42,7 +42,7 @@
               </div>
             </div>
             <div class="mb-3 d-flex justify-content-center">
-              <button type="submit" class="btn btn-primary">Register</button>
+              <button type="submit" class="btn btn-outline-primary">Register</button>
             </div>
           </div>
         </form>
