--- a/scrapapp.webui/Views/Account/ResetPassword.cshtml
+++ b/scrapapp.webui/Views/Account/ResetPassword.cshtml
@@ -23,7 +23,7 @@
       </div>
       <div class="form-group row">
         <div class="col-sm-10 offset-sm-2">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-outline-primary">Login</button>
         </div>
       </div>
     </form>
