--- a/scrapapp.webui/Views/Admin/RoleList.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleList.cshtml
@@ -2,41 +2,47 @@
 @section title {<title>Role List | ScrapApp</title>}
 
 <div class="row">
-    <div class="col-md-12">
-        <h1 class="h3">Role List</h1>
-        <hr>
-        <a class="btn btn-primary btn-sm" asp-controller="Admin" asp-action="RoleCreate">Create Role</a>
-        <table class="table table-bordered mt-3">
-            <thead>
-                <tr>
-                    <td style="width: 250px;">Id</td>
-                    <td>Role Name</td>
-                    <td style="width: 160px;"></td>
-                </tr>
-            </thead>
-            <tbody>
-                @if(Model.Count()>0)
-                {
-                    @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>@item.Id</td>
-                                <td>@item.Name</td>                              
-                                <td>
-                                    <a class="btn btn-primary btn-sm" asp-controller="Admin" asp-action="RoleEdit" asp-route-id="@item.Id">Edit</a>
-                                    <form asp-controller="Admin" asp-action="DeleteRole" method="POST" style="display: inline;">
-                                        <input type="hidden" name="RoleId" value="@item.Id">
-                                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                    </form>
-                                </td>
-                        </tr>
-                        }
-                }else{
-                    <div class="alert alert-warning">
-                        <h3>No Roles</h3>
-                    </div>
-                }
-            </tbody>
-        </table>
+  <div class="col-md-12">
+    <div class="text-center p-3">
+      <h1>Role List</h1>
     </div>
+    @if(Model.Count()>0)
+    {
+      <table class="table table-bordered mt-3 sortable">
+        <thead>
+          <tr>
+            <td style="width: 250px;">Id</td>
+            <td>Role Name</td>
+            <td style="width: 160px;"></td>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var item in Model)
+          {
+            <tr>
+              <td>@item.Id</td>
+              <td>@item.Name</td>
+              <td>
+                <a class="btn btn-outline-primary btn-sm" asp-controller="Admin" asp-action="RoleUpdate" asp-route-id="@item.Id">Edit</a>
+                <form asp-controller="Admin" asp-action="DeleteRole" method="POST" style="display: inline;">
+                  <input type="hidden" name="RoleId" value="@item.Id">
+                  <button type="submit" class="btn btn-outline-danger btn-sm">Delete</button>
+                </form>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    }else{
+    <div class="text-center fs-5 alertwarning">
+      <h1 class="h3">No Roles</h1>
+    </div> 
+    }
+    <div class="container-sm mt-5" >
+      <div class="row justify-content-center">
+        <a class="col-2 btn btn-outline-primary btn-sm" asp-controller="Admin" asp-action="RoleCreate">Create Role</a>
+      </div>
+    </div>
+  </div>
 </div>
+@section JavaScript {<script src="~/js/sorttable.js"></script>}
