--- a/scrapapp.webui/Views/Admin/RoleUpdate.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleUpdate.cshtml
@@ -11,7 +11,7 @@
                 @if(Model.NonMembers.Count()==0)
                 {
                     <tr>
-                        <td colspan="2">Bütün kullanılar role ait</td>
+                        <td colspan="2">All Users are in this role.</td>
                     </tr>
                 }else{
                     @foreach (var user in Model.NonMembers)
@@ -45,7 +45,7 @@
                     }
                 }
             </table>
-            <button type="submit" class="btn btn-primary">Save Changes</button>
+            <button type="submit" class="btn btn-outline-primary">Save Changes</button>
         </form>
     </div>
 </div>
