--- a/scrapapp.webui/Views/Cart/Checkout.cshtml
+++ b/scrapapp.webui/Views/Cart/Checkout.cshtml
@@ -62,7 +62,7 @@
           <input asp-for="@Model.Cvc" class="form-control">
         </div>
       </div>
-      <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+      <button type="submit" class="btn btn-outline-primary btn-lg btn-block">Submit</button>
     </form>
   </div>
   <div class="col-md-4">
@@ -70,7 +70,6 @@
       <span>Summary Information</span>
     </h4>
     <ul class="list-group mb-3">
-
       @foreach (var item in Model.CartModel.CartItems)
       {
       <li class="list-group-item d-flex justify-content-between">
@@ -80,12 +79,10 @@
         <span class="text-muted">@item.Price.ToString("c")</span>
       </li>
       }
-
       <li class="list-group-item d-flex justify-content-between">
         <span>Total</span>
         <strong>@Model.CartModel.TotalPrice().ToString("c")</strong>
       </li>
     </ul>
-
   </div>
 </div>
