--- a/scrapapp.webui/Views/Cart/Index.cshtml
+++ b/scrapapp.webui/Views/Cart/Index.cshtml
@@ -4,13 +4,9 @@
 
 @if(Model.CartItems.Count==0)
 {
-<div class="row mt-3">
-  <div class="col-3 mx-auto">
-    <div class="alert alert-warning text-center">
-      There is no item in your cart.
-    </div>
-  </div>
-</div>
+<div class="text-center fs-5 alertwarning">
+  <h1 class="h3">There is no item in your cart.</h1>
+</div> 
 }
 else{
 <div class="row mt-3">
@@ -43,7 +39,7 @@ else{
           <td>
             <form asp-controller="Cart" asp-action="DeleteFromCart" method="post">
               <input type="hidden" name="productId" value="@item.ProductId">
-              <button type="submit" class="btn btn-danger btn-sm">
+              <button type="submit" class="btn btn-outline-danger btn-sm">
                 Delete
               </button>
             </form>
@@ -74,10 +70,10 @@ else{
       </tbody>
     </table>
     <div class="text-center">
-      <a href="/" class="btn btn-primary">
+      <a href="/" class="btn btn-outline-primary">
         Alışverişe Devam Et
       </a>
-      <a href="/checkout" class="btn btn-primary">
+      <a href="/checkout" class="btn btn-outline-primary">
         Checkout
       </a>
     </div>
