--- a/scrapapp.webui/Views/Cart/Orders.cshtml
+++ b/scrapapp.webui/Views/Cart/Orders.cshtml
@@ -4,13 +4,9 @@
 
 @if(Model.Count==0)
 {
-<div class="row mt-3">
-  <div class="col-3 mx-auto">
-    <div class="alert alert-warning text-center">
-      There are no orders yet.
-    </div>
-  </div>
-</div>
+  <div class="text-center fs-5 alertwarning">
+    <h1 class="h3">There are no orders yet.</h1>
+  </div> 
 }
   @foreach (var order in Model)
   {
