--- a/scrapapp.webui/Views/Account/Register.cshtml
+++ b/scrapapp.webui/Views/Account/Register.cshtml
@@ -1,7 +1,9 @@
 @model RegisterModel
 
-@section title {<title>Register | ScrapApp</title>}
-<div class="container-sm mt-3" >
+@section title {
+  <title>Register | ScrapApp</title>
+}
+<div class="container-sm mt-3">
   <div class="row justify-content-center">
     <div class="card col-6 p-0">
       <div class="card-header bg-info">
@@ -19,7 +21,7 @@
               <div class="col">
                 <input class="form-control" asp-for="Email" placeholder="Email">
                 <span asp-validation-for="Email" class="text-danger"></span>
-              </div> 
+              </div>
             </div>
             <div class="row mb-3">
               <div class="col">
@@ -52,7 +54,7 @@
 </div>
 
 @section JavaScript
-{
-    <script src="~/js/jquery.validate.js"></script>
-    <script src="~/js/jquery.validate.unobtrusive.js"></script>
+  {
+  <script src="~/js/jquery.validate.js"></script>
+  <script src="~/js/jquery.validate.unobtrusive.js"></script>
 }
