--- a/scrapapp.webui/Views/Admin/RoleList.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleList.cshtml
@@ -11,7 +11,6 @@
       <table class="table table-bordered mt-3 sortable">
         <thead>
           <tr>
-            <td style="width: 250px;">Id</td>
             <td>Role Name</td>
             <td style="width: 160px;"></td>
           </tr>
@@ -20,10 +19,9 @@
           @foreach (var item in Model)
           {
             <tr>
-              <td>@item.Id</td>
               <td>@item.Name</td>
               <td>
-                <a class="btn btn-outline-primary btn-sm" asp-controller="Admin" asp-action="RoleUpdate" asp-route-id="@item.Id">Edit</a>
+                <a class="btn btn-outline-primary btn-sm" asp-controller="Admin" asp-action="RoleEdit" asp-route-id="@item.Id">Edit</a>
                 <form asp-controller="Admin" asp-action="DeleteRole" method="POST" style="display: inline;">
                   <input type="hidden" name="RoleId" value="@item.Id">
                   <button type="submit" class="btn btn-outline-danger btn-sm">Delete</button>
