--- a/scrapapp.webui/Views/Admin/UserEdit.cshtml
+++ b/scrapapp.webui/Views/Admin/UserEdit.cshtml
@@ -17,7 +17,7 @@
               <div class="col-9">
                 <input type="hidden" name="UserId" value="@Model.UserId">
                 <div class="input-group input-group-sm mb-3">
-                  <span class="input-group-text bg-secondary" style="color:#fff; id="inputGroup-sizing-sm">First Name</span>
+                  <span class="input-group-text bg-secondary" style="color:#fff; id=" inputGroup-sizing-sm">First Name</span>
                   <input type="text" asp-for="FirstName" class="form-control" aria-describedby="inputGroup-sizing-sm">
                   <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
@@ -28,7 +28,14 @@
                 </div>
                 <div class="input-group input-group-sm mb-3">
                   <span class="input-group-text bg-secondary" style="color:#fff;" id="inputGroup-sizing-sm">Username</span>
-                  <input type="text" asp-for="UserName" class="form-control" aria-describedby="inputGroup-sizing-sm">
+                  @if (Model.UserName.Equals("admin"))
+                  {
+                    <input type="text" asp-for="UserName" class="form-control" aria-describedby="inputGroup-sizing-sm" readonly>
+                  }
+                  else
+                  {
+                    <input type="text" asp-for="UserName" class="form-control" aria-describedby="inputGroup-sizing-sm">
+                  }
                   <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
                 <div class="input-group input-group-sm mb-3">
@@ -40,26 +47,25 @@
               <div class="col-3">
                 @foreach (var rolename in ViewBag.Roles)
                 {
-                  
                   <div class="input-group input-group-sm mb-3">
                     <div class="input-group-text">
-                      <input class="form-check-input mt-0" type="checkbox" name="selectedRoles"  value="@rolename"  aria-label="Checkbox for following text input" id="@rolename" @(Model.SelectedRoles.Any(i => i == rolename) ? "checked" : "")>
+                      <input class="form-check-input mt-0" type="checkbox" name="selectedRoles" value="@rolename" aria-label="Checkbox for following text input" id="@rolename" @(Model.SelectedRoles.Any(i => i == rolename) ? "checked" : "")>
                     </div>
                     <input type="text" class="form-control" aria-label="Text input with checkbox" value="@rolename">
                   </div>
                 }
-                  <div class="input-group input-group-sm mb-3">
-                    <div class="input-group-text">
-                      <input class="form-check-input mt-0" type="checkbox" asp-for="EmailConfirmed">
-                    </div>
-                    <input type="text" class="form-control" aria-label="Text input with checkbox" value="EmailConfirmed">
+                <div class="input-group input-group-sm mb-3">
+                  <div class="input-group-text">
+                    <input class="form-check-input mt-0" type="checkbox" asp-for="EmailConfirmed">
                   </div>
+                  <input type="text" class="form-control" aria-label="Text input with checkbox" value="EmailConfirmed">
+                </div>
               </div>
             </div>
           </div>
-            <div class="row justify-content-center">
-              <button type="submit" class="btn btn-outline-info" style="max-width: 160px;color:#08f;">Save Changes</button>
-            </div>
+          <div class="row justify-content-center">
+            <button type="submit" class="btn btn-outline-info" style="max-width: 160px;color:#08f;">Save Changes</button>
+          </div>
         </form>
       </div>
     </div>
