--- a/scrapapp.webui/Views/Shared/_categories.cshtml
+++ b/scrapapp.webui/Views/Shared/_categories.cshtml
@@ -1,36 +1,7 @@
 @model List<Category>
 <div class="filtme justify-content-center">
-  <form class="list-group align-self-center" action="/Home/FilterProducts">
+  <form class="list-group align-self-center" action="/Products/FilterProducts">
     <div class="accordion accordion-container" id="acco" style="min-width: 245px;">
-      @* @foreach (var item in Model)
-      {
-        string c1 = "collapsed";
-        string c2 = "false";
-        string c3 = "";
-        @if(item.Key == "Brand" || item.Key == "Storage" || item.Key == "System"){
-          c1 = "";
-          c2 = "true";
-          c3 = "show";
-        }
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button btnhover @c1" type="button" data-bs-toggle="collapse" data-bs-target="#@item.Key" aria-expanded="@c2" aria-controls="@item.Key">@item.Key</button>
-          </h2>
-          <div id="@item.Key" class="accordion-collapse collapse @c3">
-            <div class="accordion-body"  id="s_@item.Key">
-              <input type="text" class="form-control mb-3" id="s_@item.Key.ToLower()" placeholder="Search">
-              <input type="text" name="@item.Key" hidden>
-              @foreach (Category category in item.Value)
-              {
-                <div class="form-check mb-0">
-                  <input class="form-check-input getAll@(item.Key)" type="checkbox" id = "check_@category.Name" @(category.isChecked?"checked":"") value="@category.Name" >
-                  <label class="form-check-label" for="check_@category.Name">@category.Name</label>
-                </div>
-              }
-            </div>
-          </div>
-        </div>
-      } *@
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button btnhover collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Price" aria-expanded="false" aria-controls="Price">
@@ -70,7 +41,7 @@
       </div>
     </div>
     <button class="list-group-item" type="submit" style="border: none;" id="search_Button" >
-      <li class="btn btn-outline-info">Search</li>
+      <li class="btn btn-outline-info">Filter Products</li>
     </button>
   </form>
 </div>
