--- a/scrapapp.webui/Views/Product/Index.cshtml
+++ b/scrapapp.webui/Views/Product/Index.cshtml
@@ -60,24 +60,24 @@
   </div>
   <nav aria-label="Page navigation" class="mt-6">
     <ul class="pagination justify-content-center">
-      @for (int i = 0; i < Model.PageInfo.TotalPages(); i++)
-      {
-        @if(String.IsNullOrEmpty(Model.PageInfo.CurrentCategory))
-        {
-          <li class="page-item @(Model.PageInfo.CurrentPage==i+1?"active":"")">
-            <a class="page-link" href="/Products?page=@(i+1)">
-              @(i+1)
-            </a>
-          </li>  
-        }
-        else
-        {
-          <li class="page-item @(Model.PageInfo.CurrentPage==i+1?"active":"")">
-            <a class="page-link" href="/Products/@Model.PageInfo.CurrentCategory?page=@(i+1)">
-              @(i+1)
-            </a>
-          </li> 
-        }
+      @if(@Model.PageInfo.HasPrevious() == 1){
+        <li class="page-item">
+          <a href="~/" class="page-link">&laquo First Page</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page=@(Model.PageInfo.CurrentPage-1)">@(Model.PageInfo.CurrentPage-1)</a>
+        </li>
+      }
+      <li class="page-item active" aria-current="page">
+        <a class="page-link" href="?page=@Model.PageInfo.CurrentPage">@Model.PageInfo.CurrentPage</a>
+      </li>
+      @if(Model.PageInfo.HasNext() == 1){
+        <li class="page-item">
+          <a class="page-link" href="?page=@(Model.PageInfo.CurrentPage+1)">@(Model.PageInfo.CurrentPage+1)</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page=@Model.PageInfo.TotalPages()">Last Page &raquo</a> 
+        </li>
       }
     </ul>
   </nav>
